All the changes

--- a/guides/10_intermediate_python.ipynb
+++ b/guides/10_intermediate_python.ipynb
@@ -20,10 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5802e2f0-0ea0-4237-bbb7-f375a34260f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'title': 'Great Expectations', 'author': 'Charles Dickens'}, {'title': 'Bleak House', 'author': 'Charles Dickens'}, {'title': 'An Book By No Author'}, {'title': 'Moby Dick', 'author': 'Herman Melville'}]\n"
+     ]
+    }
+   ],
    "source": [
     "# First let's create some things:\n",
     "\n",
@@ -34,7 +42,8 @@
     "book3 = {\"title\": \"An Book By No Author\"}\n",
     "book4 = {\"title\": \"Moby Dick\", \"author\": \"Herman Melville\"}\n",
     "\n",
-    "books = [book1, book2, book3, book4]"
+    "books = [book1, book2, book3, book4]\n",
+    "print(books)"
    ]
   },
   {
@@ -216,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "1efc26fa-9144-4352-9a17-dfec1d246aad",
    "metadata": {},
    "outputs": [],
@@ -228,15 +237,40 @@
     "def come_up_with_fruit_names():\n",
     "    for fruit in fruits:\n",
     "        time.sleep(1) # thinking of a fruit\n",
-    "        yield fruit"
+    "        yield from fruit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "eac338bb-285c-45c8-8a3e-dbfc41409ca3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "p\n",
+      "p\n",
+      "l\n",
+      "e\n",
+      "s\n",
+      "B\n",
+      "a\n",
+      "n\n",
+      "a\n",
+      "n\n",
+      "a\n",
+      "s\n",
+      "P\n",
+      "e\n",
+      "a\n",
+      "r\n",
+      "s\n"
+     ]
+    }
+   ],
    "source": [
     "# Then use it\n",
     "\n",
@@ -246,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f6880578-a3de-4502-952a-4572b95eb9ff",
    "metadata": {},
    "outputs": [],
@@ -261,10 +295,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9e316f02-f87f-441d-a01f-024ade949607",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Charles Dickens\n",
+      "Charles Dickens\n",
+      "Herman Melville\n"
+     ]
+    }
+   ],
    "source": [
     "# Use it\n",
     "\n",
@@ -274,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7535c9d0-410e-4e56-a86c-ae6c0e16053f",
    "metadata": {},
    "outputs": [],
@@ -288,10 +332,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "dad34494-0f6c-4edb-b03f-b8d49ee186f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Charles Dickens\n",
+      "Charles Dickens\n",
+      "Herman Melville\n"
+     ]
+    }
+   ],
    "source": [
     "# Use it\n",
     "\n",
@@ -301,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "abeb7e61-d8aa-4af0-b05a-ae17323e678c",
    "metadata": {},
    "outputs": [],
@@ -315,10 +369,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "05b0cb43-aa83-4762-a797-d3beb0f22c44",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Charles Dickens\n",
+      "Charles Dickens\n",
+      "Herman Melville\n"
+     ]
+    }
+   ],
    "source": [
     "# Use it\n",
     "\n",
@@ -328,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "fdfea58e-d809-4dd4-b7b0-c26427f8be55",
    "metadata": {},
    "outputs": [],
@@ -341,10 +405,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "3e821d08-97be-4db9-9a5b-ce5dced3eff8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Charles Dickens\n",
+      "Herman Melville\n"
+     ]
+    }
+   ],
    "source": [
     "# Use it\n",
     "\n",
@@ -354,10 +427,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "905ba603-15d8-4d01-9a79-60ec293d7ca1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You juggle pretentious mustaches. I worship smelly spreadsheets. They tap dance on overripe turnips. They dramatically renounce melodramatic thermostats. We deny the existence of overripe thermostats"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 26\u001b[39m\n\u001b[32m     24\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m letter \u001b[38;5;129;01min\u001b[39;00m infinite_random_sentences():\n\u001b[32m     25\u001b[39m     \u001b[38;5;28mprint\u001b[39m(letter, end=\u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m, flush=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m---> \u001b[39m\u001b[32m26\u001b[39m     \u001b[43mtime\u001b[49m\u001b[43m.\u001b[49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m0.02\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
    "source": [
     "# And for some fun - press the stop button in the toolbar when bored!\n",
     "# It's like we've made our own Large Language Model... although not particularly large..\n",
@@ -373,13 +465,13 @@
     "\n",
     "def infinite_random_sentences():\n",
     "    while True:\n",
-    "        yield from random.choice(pronouns)\n",
+    "        yield random.choice(pronouns)\n",
     "        yield \" \"\n",
-    "        yield from random.choice(verbs)\n",
+    "        yield random.choice(verbs)\n",
     "        yield \" \"\n",
-    "        yield from random.choice(adjectives)\n",
+    "        yield random.choice(adjectives)\n",
     "        yield \" \"\n",
-    "        yield from random.choice(nouns)\n",
+    "        yield random.choice(nouns)\n",
     "        yield \". \"\n",
     "\n",
     "for letter in infinite_random_sentences():\n",
@@ -399,6 +491,54 @@
     "Write a Book class with a title and author. Include a method has_author()\n",
     "\n",
     "Write a BookShelf class with a list of books. Include a generator method unique_authors()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b43b3dd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Charles Dickens\n",
+      "Herman Melville\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import Optional, List, Generator\n",
+    "\n",
+    "class Book:\n",
+    "    def __init__(self, title: str, author: Optional[str] = None):\n",
+    "        self.title = title\n",
+    "        self.author = author\n",
+    "\n",
+    "    def has_author(self) -> bool:\n",
+    "        return bool(self.author)\n",
+    "\n",
+    "\n",
+    "class BookShelf:\n",
+    "    def __init__(self, books: Optional[List[Book]] = None):\n",
+    "        self.books: List[Book] = books or []\n",
+    "\n",
+    "    def add(self, book: Book) -> None:\n",
+    "        self.books.append(book)\n",
+    "\n",
+    "    def unique_authors(self) -> Generator[str, None, None]:\n",
+    "        seen = set()\n",
+    "        for book in self.books:\n",
+    "            if book.has_author() and book.author not in seen:\n",
+    "                seen.add(book.author)\n",
+    "                yield book.author\n",
+    "\n",
+    "\n",
+    "shelf = BookShelf([Book(b.get(\"title\"), b.get(\"author\")) for b in books])\n",
+    "\n",
+    "for author in shelf.unique_authors():\n",
+    "    print(author)"
    ]
   },
   {
@@ -460,7 +600,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "agents (3.12.12)",
    "language": "python",
    "name": "python3"
   },
@@ -474,7 +614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
