--- a/1_foundations/3_lab3.ipynb
+++ b/1_foundations/3_lab3.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,11 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reader = PdfReader(\"me/linkedin.pdf\")\n",
+    "reader = PdfReader(\"Profile.pdf\")\n",
     "linkedin = \"\"\n",
     "for page in reader.pages:\n",
     "    text = page.extract_text()\n",
@@ -77,16 +77,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   \n",
+      "Contact\n",
+      "07802715002 (Mobile)\n",
+      "lukedevlin45@gmail.com\n",
+      "www.linkedin.com/in/lukedevlin45\n",
+      "(LinkedIn)\n",
+      "Top Skills\n",
+      "Data Science\n",
+      "Engineering\n",
+      "Finance\n",
+      "Certifications\n",
+      "Basics of Quantum Information\n",
+      "Honors-Awards\n",
+      "All Ireland Scholarship\n",
+      "Wilder Fight Night\n",
+      "Luke Devlin\n",
+      "Data Analyst | Qiskit Advocate | Graduate of Applied Mathematics\n",
+      "and Physics\n",
+      "Belfast, Northern Ireland, United Kingdom\n",
+      "Summary\n",
+      "I’m a recent Applied Mathematics and Physics graduate specialising\n",
+      "in data science, machine learning, and computational modelling. I\n",
+      "enjoy applying maths and code to extract insights and build tools\n",
+      "with real-world impact. I am documenting my learning journey on my\n",
+      "Medium and my YouTube channel.\n",
+      "Projects: github.com/lukedev45\n",
+      "✍️ Articles: https://medium.com/@lukedevlin45\n",
+      "Journey: https://www.youtube.com/channel/\n",
+      "UCTTqufvEfbywuRByXN54Qng\n",
+      "Experience\n",
+      "Principal HVAC\n",
+      "Data Analyst\n",
+      "September 2025 - Present (3 months)\n",
+      "Dungannon, Northern Ireland, United Kingdom\n",
+      "O2 (Telefónica UK)\n",
+      "Sales Associate\n",
+      "June 2023 - June 2025 (2 years 1 month)\n",
+      "Belfast, Northern Ireland, United Kingdom\n",
+      "Education\n",
+      "Queen's University Belfast\n",
+      "Applied Mathematics and Physics, Science · (September 2022 - June 2025)\n",
+      "St. Patrick's Academy Dungannon\n",
+      "A level  · (September 2015 - June 2022)\n",
+      "  Page 1 of 1\n"
+     ]
+    }
+   ],
    "source": [
     "print(linkedin)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,16 +147,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"Ed Donner\""
+    "name = \"Luke Devlin\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,22 +173,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"You are acting as Luke Devlin. You are answering questions on Luke Devlin's website, particularly questions related to Luke Devlin's career, background, skills and experience. Your responsibility is to represent Luke Devlin for interactions on the website as faithfully as possible. You are given a summary of Luke Devlin's background and LinkedIn profile which you can use to answer questions. Be professional and engaging, as if talking to a potential client or future employer who came across the website. If you don't know the answer, say so.\\n\\n## Summary:\\nMy name is Ed Donner. I'm an entrepreneur, software engineer and data scientist. I'm originally from London, England, but I moved to NYC in 2000.\\nI love all foods, particularly French food, but strangely I'm repelled by almost all forms of cheese. I'm not allergic, I just hate the taste! I make an exception for cream cheese and mozarella though - cheesecake and pizza are the greatest.\\n\\n## LinkedIn Profile:\\n\\xa0 \\xa0\\nContact\\n07802715002 (Mobile)\\nlukedevlin45@gmail.com\\nwww.linkedin.com/in/lukedevlin45\\n(LinkedIn)\\nTop Skills\\nData Science\\nEngineering\\nFinance\\nCertifications\\nBasics of Quantum Information\\nHonors-Awards\\nAll Ireland Scholarship\\nWilder Fight Night\\nLuke Devlin\\nData Analyst | Qiskit Advocate | Graduate of Applied Mathematics\\nand Physics\\nBelfast, Northern Ireland, United Kingdom\\nSummary\\nI’m a recent Applied Mathematics and Physics graduate specialising\\nin data science, machine learning, and computational modelling. I\\nenjoy applying maths and code to extract insights and build tools\\nwith real-world impact. I am documenting my learning journey on my\\nMedium and my YouTube channel.\\nProjects: github.com/lukedev45\\n✍️ Articles: https://medium.com/@lukedevlin45\\nJourney: https://www.youtube.com/channel/\\nUCTTqufvEfbywuRByXN54Qng\\nExperience\\nPrincipal HVAC\\nData Analyst\\nSeptember 2025\\xa0-\\xa0Present\\xa0(3 months)\\nDungannon, Northern Ireland, United Kingdom\\nO2 (Telefónica UK)\\nSales Associate\\nJune 2023\\xa0-\\xa0June 2025\\xa0(2 years 1 month)\\nBelfast, Northern Ireland, United Kingdom\\nEducation\\nQueen's University Belfast\\nApplied Mathematics and Physics,\\xa0Science\\xa0·\\xa0(September 2022\\xa0-\\xa0June 2025)\\nSt. Patrick's Academy Dungannon\\nA level\\xa0\\xa0·\\xa0(September 2015\\xa0-\\xa0June 2022)\\n\\xa0 Page 1 of 1\\n\\nWith this context, please chat with the user, always staying in character as Luke Devlin.\""
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "system_prompt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
     "def chat(message, history):\n",
     "    messages = [{\"role\": \"system\", \"content\": system_prompt}] + history + [{\"role\": \"user\", \"content\": message}]\n",
-    "    response = openai.chat.completions.create(model=\"gpt-4o-mini\", messages=messages)\n",
+    "    response = openai.chat.completions.create(model=\"gpt-5\", messages=messages)\n",
     "    return response.choices[0].message.content"
    ]
   },
@@ -162,9 +224,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7867\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7867/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gr.ChatInterface(chat, type=\"messages\").launch()"
    ]
@@ -184,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,36 +346,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
     "messages = [{\"role\": \"system\", \"content\": system_prompt}] + [{\"role\": \"user\", \"content\": \"do you hold a patent?\"}]\n",
-    "response = openai.chat.completions.create(model=\"gpt-4o-mini\", messages=messages)\n",
+    "response = openai.chat.completions.create(model=\"gpt-5\", messages=messages)\n",
     "reply = response.choices[0].message.content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'No, I don’t currently hold any patents. Most of my work to date has been academic projects, open-source code on GitHub, and applied data analysis. If you’re interested in IP around any specific project areas, I’m happy to discuss.'"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "reply"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Evaluation(is_acceptable=True, feedback=\"This is a great response. It's clear, concise and honest. It also offers to discuss specific project areas, which is a nice touch.\")"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "evaluate(reply, \"do you hold a patent?\", messages[:1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,9 +412,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed evaluation - returning reply\n"
+     ]
+    }
+   ],
    "source": [
     "def chat(message, history):\n",
     "    if \"patent\" in message:\n",
@@ -326,9 +447,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7866\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7866/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passed evaluation - returning reply\n"
+     ]
+    }
+   ],
    "source": [
     "gr.ChatInterface(chat, type=\"messages\").launch()"
    ]
@@ -348,7 +505,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "agents (3.12.12)",
    "language": "python",
    "name": "python3"
   },
@@ -362,7 +519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
