--- a/guides/11_async_python.ipynb
+++ b/guides/11_async_python.ipynb
@@ -130,11 +130,197 @@
     "    asyncio.run(do_a_lot_of_work_in_parallel())\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1ed23f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello, Luke!'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Basic example\n",
+    "import asyncio\n",
+    "\n",
+    "async def greet(name):\n",
+    "    await asyncio.sleep(2)\n",
+    "    return f\"Hello, {name}!\"\n",
+    "await greet(\"Luke\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf812a1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Data fetched', 'Data processed', 'Data saved']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Parrallel coroutines\n",
+    "import asyncio\n",
+    "\n",
+    "async def fetch_data():\n",
+    "    await asyncio.sleep(1)\n",
+    "    return \"Data fetched\"\n",
+    "\n",
+    "async def process_data():\n",
+    "    await asyncio.sleep(1)\n",
+    "    return \"Data processed\"\n",
+    "\n",
+    "async def save_data():\n",
+    "    await asyncio.sleep(1)\n",
+    "    return \"Data saved\"\n",
+    "\n",
+    "result = await asyncio.gather(\n",
+    "    fetch_data(),\n",
+    "    process_data(),\n",
+    "    save_data()\n",
+    ")\n",
+    "\n",
+    "print(result)  # Should print: ['Data fetched', 'Data processed', 'Data saved']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a14db562",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "Liftoff!\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Async Countdown\n",
+    "import asyncio\n",
+    "\n",
+    "async def countdown():\n",
+    "    for i in range(5, 0, -1):\n",
+    "        print(i)\n",
+    "        await asyncio.sleep(1)\n",
+    "    print(\"Liftoff!\")\n",
+    "\n",
+    "await countdown()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "348d359f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blocking took 0.00024056434631347656 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Comparision with synchronous code\n",
+    "import time\n",
+    "\n",
+    "start = time.time()\n",
+    "\n",
+    "def blocking():\n",
+    "    for i in range(3):\n",
+    "        time.sleep(1)\n",
+    "    print(\"Blocking done\")\n",
+    "\n",
+    "end = time.time()\n",
+    "tot_time_block = end - start\n",
+    "print(f\"Blocking took {tot_time_block} seconds\")\n",
+    "\n",
+    "# start = time.time()\n",
+    "# async def non_blocking():\n",
+    "#     for i in range(3):\n",
+    "#         await asyncio.sleep(1)\n",
+    "#     print(\"Async done\")\n",
+    "# end = time.time()\n",
+    "# tot_time_async = end - start\n",
+    "# print(f\"Async setup took {tot_time_async} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "bd3bb87f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7860\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Gradio async app\n",
+    "\n",
+    "import gradio as gr\n",
+    "import asyncio\n",
+    "\n",
+    "async def greet(name):\n",
+    "    await asyncio.sleep(2)\n",
+    "    return f\"Hello, {name}!\"\n",
+    "\n",
+    "interface = gr.Interface(fn=greet, inputs=\"text\", outputs=\"text\")\n",
+    "interface.launch()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "agents (3.12.12)",
    "language": "python",
    "name": "python3"
   },
@@ -148,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
